--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -47,12 +47,6 @@
         .nav {
             margin: 1em;
         }
-        p {
-            padding-left: 5em;
-            padding-right: 5em;
-            padding-bottom: 5em;
-            font-size: 1.5em;
-        }
         a:link {
             color: rgb(18, 61, 18);
         }
@@ -99,6 +93,7 @@
             .edm {width: 32%; padding: .3em;}
             .words {padding-top: 1em; padding-left: 5em;}
             .date {padding: 1em; padding-left: 3em;}
+            p {padding-left: 5em; padding-right: 5em; padding-bottom: 5em; font-size: 1.5em;}
         }
         @media only screen and (max-width: 600px) {
             .school {width: 100%;} 
@@ -108,6 +103,7 @@
             .coolpic2 {flex-direction: column;}
             .words {padding-top: 1em; padding-left: 2em;}
             .date {padding: 1em; padding-left: 1em;}
+            p {padding: 1em; font-size: 1em;}
             }
     </style>
 </head>
