--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -47,12 +47,6 @@
         .nav {
             margin: 1em;
         }
-        p {
-            padding-left: 5em;
-            padding-right: 5em;
-            padding-bottom: 5em;
-            font-size: 1.5em;
-        }
         caption {
             font-size: 1.5em;
             background-color: rgb(132, 196, 233);
@@ -102,13 +96,15 @@
             .both {margin-left: 5em;}
             .imagestogether {margin-top: 10em; margin-right: 3em;}
             .imageblue {margin-bottom: 7em;}
+            p {padding-left: 5em; padding-right: 5em; padding-bottom: 5em; font-size: 1.5em;}
         }
         @media only screen and (max-width: 600px) {
             h2 {max-width: 100%;} 
             .both {flex-wrap: wrap;}
-            .images {margin-left: 4.5em;}
+            .images {margin: 4em;}
             td {padding: 1em; padding-inline-end: 1em; font-size: 1em;}
             .imageblue {margin-bottom: 2em;}
+            p {padding: 1em; font-size: 1em;}
         }   
     </style>
 </head>
