--- a/project/skeletonmore.html
+++ b/project/skeletonmore.html
@@ -47,12 +47,6 @@
         .nav {
             margin: 1em;
         }
-        p {
-            padding-left: 5em;
-            padding-right: 5em;
-            padding-bottom: 3em;
-            font-size: 1.5em;
-        }
         a:link {
             color: rgb(18, 61, 18);
         }
@@ -115,6 +109,7 @@
             .dorris {width: 70%}
             .watch {font-size: 3em;}
             .minispotify {margin-top: 1.7em; margin-left: 1em;}
+            p {padding-left: 5em; padding-right: 5em; padding-bottom: 3em; font-size: 1.5em;}
         }
         @media only screen and (max-width: 600px) {
             .flareguns {width: 100%;} 
@@ -123,6 +118,7 @@
             .dorris {width: 100%}
             .watch {font-size: 1.5em;}
             .minispotify {margin-top: 4em; margin-left: 1em; margin-right: 1em}
+            p {padding: 1em; font-size: 1em;}
         }
     </style>
 </head>
