--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -101,8 +101,7 @@
             h2 {max-width: 100%;} 
             .both {flex-wrap: wrap;}
             td {padding: 1em; padding-inline-end: 1em; font-size: 1em;}
-            .imageblue {margin-bottom: 2em; margin-left: 3em;}
-            .imageblue {margin-left: 3em;}
+            .imageblue {margin-bottom: 2em;}
             p {padding: 1em; font-size: 1em;}
         }   
     </style>
