--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -102,6 +102,7 @@
             .both {flex-wrap: wrap;}
             td {padding: 1em; padding-inline-end: 1em; font-size: 1em;}
             .imageblue {margin-bottom: 2em;}
+            .imagestogether {margin-left: 3em;
             p {padding: 1em; font-size: 1em;}
         }   
     </style>
