--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -41,7 +41,6 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            padding-bottom: 5em;
             max-width: 100%;
         }
         .nav {
@@ -69,9 +68,6 @@
         .bio {
             display: flex;
         }
-        .description {
-            margin-top: 5em;
-        }
         .coolpic1, .coolpic2 {
             display: flex;
             justify-content: center;
@@ -87,13 +83,15 @@
             margin-right: auto;
         }
         @media only screen and (min-width: 600px) {
-            .school {width: 70%; padding: 1em; margin-right: 1em;} 
+            .school {width: 70%; padding: 1em;} 
             h2 {max-width: 100%;} 
             .bio {flex-direction: column;}
             .edm {width: 32%; padding: .3em;}
             .words {padding-top: 1em; padding-left: 5em;}
             .date {padding: 1em; padding-left: 3em;}
             p {padding-left: 5em; padding-right: 5em; padding-bottom: 5em; font-size: 1.5em;}
+            .toppic {padding-bottom: 5em;}
+            .description {margin-top: 5em;}
         }
         @media only screen and (max-width: 600px) {
             .school {width: 100%;} 
@@ -104,7 +102,9 @@
             .words {padding-top: 1em; padding-left: 2em;}
             .date {padding: 1em; padding-left: 1em;}
             p {padding: 1em; font-size: 1em;}
-            }
+            .toppic {padding-bottom: 1em;}
+            .description {margin-top: .1em;}
+        }
     </style>
 </head>
 <body>
