--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -102,8 +102,8 @@
             .both {flex-wrap: wrap;}
             td {padding: 1em; padding-inline-end: 1em; font-size: 1em;}
             .imageblue {margin-bottom: 2em;}
-            .imagestogether {margin-left: 2em;
-            p {padding: 1em; font-size: 1em;}
+            .imagestogether {margin-left: 2em;}
+            p {padding: 1em; font-size: 1em; margin-bottom: 3em;}
         }   
     </style>
 </head>
