--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -100,7 +100,7 @@
             .coolpic1 {flex-direction: column;}
             .coolpic2 {flex-direction: column;}
             .words {padding-top: 1em; padding-left: 2em;}
-            .date {padding: 1em; padding-left: 1em;}
+            .date {padding-top: 1em; padding-bottom: 1em; padding-right: 1em; padding-left: 1em;}
             p {padding: 1em; font-size: 1em;}
             .toppic {padding-bottom: 1em;}
             .description {margin-top: .1em;}
