--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -41,7 +41,6 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            padding-bottom: 5em;
             max-width: 100%;
         }
         .nav {
@@ -96,6 +95,7 @@
             .imagestogether {margin-top: 10em; margin-right: 3em;}
             .imageblue {margin-bottom: 7em;}
             p {padding-left: 5em; padding-right: 5em; padding-bottom: 5em; font-size: 1.5em;}
+            .intropic {padding-bottom: 5em;}
         }
         @media only screen and (max-width: 600px) {
             h2 {max-width: 100%;} 
@@ -104,6 +104,7 @@
             .imageblue {margin-bottom: 2em;}
             .imagestogether {margin-left: 2em;}
             p {padding: 1em; font-size: 1em; margin-bottom: 3em;}
+            .intropic {padding-bottom: 1em;}
         }   
     </style>
 </head>
