--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -104,7 +104,7 @@
             .imageblue {margin-bottom: 2em;}
             .imagestogether {margin-left: 2em;}
             p {padding: 1em; font-size: 1em; margin-bottom: 3em;}
-            .intropic {padding-bottom: 1em;}
+            .intropic {padding-bottom: .1em;}
         }   
     </style>
 </head>
