--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -89,7 +89,7 @@
             .edm {width: 32%; padding: .3em;}
             .words {padding-top: 1em; padding-left: 5em;}
             .date {padding: 1em; padding-left: 3em;}
-            p {padding-left: 5em; padding-right: 5em; padding-bottom: 5em; font-size: 1.5em;}
+            p {padding: 5em; font-size: 1.5em;}
             .toppic {padding-bottom: 5em;}
             .description {margin-top: 5em;}
         }
@@ -99,9 +99,9 @@
             .edm {width: 100%; padding-bottom: .3em;}
             .coolpic1 {flex-direction: column;}
             .coolpic2 {flex-direction: column;}
-            .words {padding-top: 1em; padding-left: 2em;}
+            .words {padding-top: 1em; padding-left: 2em; padding-right: 2em;}
             .date {padding-top: 1em; padding-bottom: 1em; padding-right: 1em; padding-left: 1em;}
-            p {padding: 1em; font-size: 1em;}
+            p {padding-left: 1em; padding-right: 1em; padding-bottom: 5em; font-size: 1em;}
             .toppic {padding-bottom: 1em;}
             .description {margin-top: .1em;}
         }
