--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -29,7 +29,6 @@
             margin-bottom: .3em;
         }
         h1 {
-            font-size: 3.5em;
             text-align: center;
             color: rgb(16, 66, 47)
         }
@@ -92,6 +91,7 @@
             p {padding: 5em; font-size: 1.5em;}
             .toppic {padding-bottom: 5em;}
             .description {margin-top: 5em;}
+            h1 {font-size: 3.5em;}
         }
         @media only screen and (max-width: 600px) {
             .school {width: 100%;} 
@@ -104,6 +104,7 @@
             p {padding-left: 1em; padding-right: 1em; padding-bottom: 5em; font-size: 1em;}
             .toppic {padding-bottom: 1em;}
             .description {margin-top: .1em;}
+            h1 {font-size: 2em;}
         }
     </style>
 </head>
