--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -96,6 +96,7 @@
             .imageblue {margin-bottom: 7em;}
             p {padding-left: 5em; padding-right: 5em; padding-bottom: 5em; font-size: 1.5em;}
             .intropic {padding-bottom: 5em;}
+            h1 {font-size: 3.5em;}
         }
         @media only screen and (max-width: 600px) {
             h2 {max-width: 100%;} 
@@ -105,6 +106,7 @@
             .imagestogether {margin-left: 2em;}
             p {padding: 1em; font-size: 1em; margin-bottom: 3em;}
             .intropic {padding-bottom: .1em;}
+            h1 {font-size: 2em;}
         }   
     </style>
 </head>
