--- a/project/skeletonmore.html
+++ b/project/skeletonmore.html
@@ -29,7 +29,6 @@
             margin-bottom: .3em;
         }
         h1 {
-            font-size: 3.5em;
             text-align: center;
             color: rgb(16, 66, 47)
         }
@@ -110,6 +109,7 @@
             .watch {font-size: 3em;}
             .minispotify {margin-top: 1.7em; margin-left: 1em;}
             p {padding-left: 5em; padding-right: 5em; padding-bottom: 3em; font-size: 1.5em;}
+            h1 {font-size: 3.5em;}
         }
         @media only screen and (max-width: 600px) {
             .flareguns {width: 100%;} 
@@ -119,6 +119,7 @@
             .watch {font-size: 1.5em;}
             .minispotify {margin-top: 4em; margin-left: 1em; margin-right: 1em}
             p {padding: 1em; font-size: 1em;}
+            h1 {font-size: 2em;}
         }
     </style>
 </head>
