--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -34,7 +34,6 @@
             color: rgb(16, 66, 47)
         }
         h2 {
-            font-size: 2em;
             text-align: center;
         }
         .intropic {
@@ -97,6 +96,7 @@
             p {padding-left: 5em; padding-right: 5em; padding-bottom: 5em; font-size: 1.5em;}
             .intropic {padding-bottom: 5em;}
             h1 {font-size: 3.5em;}
+            h2 {font-size: 2em;}
         }
         @media only screen and (max-width: 600px) {
             h2 {max-width: 100%;} 
@@ -107,6 +107,7 @@
             p {padding: 1em; font-size: 1em; margin-bottom: 3em;}
             .intropic {padding-bottom: .1em;}
             h1 {font-size: 2em;}
+            h2 {font-size: 1em;}
         }   
     </style>
 </head>
