--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -33,7 +33,6 @@
             color: rgb(16, 66, 47)
         }
         h2 {
-            font-size: 2em;
             text-align: center;
         }
         .toppic {
@@ -92,6 +91,7 @@
             .toppic {padding-bottom: 5em;}
             .description {margin-top: 5em;}
             h1 {font-size: 3.5em;}
+            h2 {font-size: 2em;}
         }
         @media only screen and (max-width: 600px) {
             .school {width: 100%;} 
@@ -105,6 +105,7 @@
             .toppic {padding-bottom: 1em;}
             .description {margin-top: .1em;}
             h1 {font-size: 2em;}
+            h2 {font-size: 1em;}
         }
     </style>
 </head>
