--- a/project/skeletonmore.html
+++ b/project/skeletonmore.html
@@ -33,7 +33,6 @@
             color: rgb(16, 66, 47)
         }
         h2 {
-            font-size: 2em;
             text-align: center;
         }
         .intropic {
@@ -110,6 +109,7 @@
             .minispotify {margin-top: 1.7em; margin-left: 1em;}
             p {padding-left: 5em; padding-right: 5em; padding-bottom: 3em; font-size: 1.5em;}
             h1 {font-size: 3.5em;}
+            h2 {font-size: 2em;}
         }
         @media only screen and (max-width: 600px) {
             .flareguns {width: 100%;} 
@@ -117,9 +117,10 @@
             .kings {width: 100%}
             .dorris {width: 100%}
             .watch {font-size: 1.5em;}
-            .minispotify {margin-top: 4em; margin-left: 1em; margin-right: 1em}
+            .minispotify {margin-top: .2em; margin-left: 1em; margin-right: 1em; margin-bottom: 1em;}
             p {padding: 1em; font-size: 1em;}
             h1 {font-size: 2em;}
+            h2 {font-size: 1em;}
         }
     </style>
 </head>
