--- a/project/skeletonabout.html
+++ b/project/skeletonabout.html
@@ -89,7 +89,7 @@
             .date {padding: 1em; padding-left: 3em;}
             p {padding: 5em; font-size: 1.5em;}
             .toppic {padding-bottom: 5em;}
-            .description {margin-top: 5em;}
+            .description {margin-top: .001em;}
             h1 {font-size: 3.5em;}
             h2 {font-size: 2em;}
         }
@@ -110,31 +110,33 @@
     </style>
 </head>
 <body>
+<header>
     <div class="top">
         <div>
             <div class="mylogo">
-                <div><img src="images/logo.png" width="100" alt="my photo"></div>
+                <div><img src="images/logo.png" width="100" alt="My Logo"></div>
             </div>
         </div>
         <div class="socials">
             <div>
-                <div class="logo"><a href="https://www.facebook.com/quinnxcii"><img src="images/facebook.png" width="20" alt="my photo"></a></div>
-                <div class="logo"><a href="https://www.instagram.com/quinnxcii/"><img src="images/instagram.png" width="20" alt="my photo"></a></div>
-                <div class="logo"><a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ"><img src="images/spotify.png" width="20" alt="my photo"></a></div>
-                <div class="logo"><a href="https://twitter.com/QuinnXCII?s=20"><img src="images/twitter.png" width="20" alt="my photo"></a></div>
-                <div class="logo"><a href="https://quinnxcii.com"><img src="images/web.png" width="20" alt="my photo"></a></div>
+                <div class="logo"><a href="https://www.facebook.com/quinnxcii"><img src="images/facebook.png" width="20" alt="Quinn XCII Facebook"></a></div>
+                <div class="logo"><a href="https://www.instagram.com/quinnxcii/"><img src="images/instagram.png" width="20" alt="Quinn XCII Instagram"></a></div>
+                <div class="logo"><a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ"><img src="images/spotify.png" width="20" alt="Quinn XCII Spotify"></a></div>
+                <div class="logo"><a href="https://twitter.com/QuinnXCII?s=20"><img src="images/twitter.png" width="20" alt="Quinn XCII Twitter"></a></div>
+                <div class="logo"><a href="https://quinnxcii.com"><img src="images/web.png" width="20" alt="Quinn XCII Website"></a></div>
             </div>
         </div>
     </div>
-        <h1>About Quinn XCII!</h1>
-        <nav class= "navselector">
-            <a class="nav" href="skeletonhome.html">Home</a>
-            <a class="nav" href="skeletonabout.html">About</a>
-            <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
-            <a class="nav" href="skeletonmore.html">More Like This</a>
-        </nav>
+    <h1>About Quinn XCII!</h1>
+</header>
+<nav class= "navselector">
+    <a class="nav" href="skeletonhome.html">Home</a>
+    <a class="nav" href="skeletonabout.html">About</a>
+    <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
+    <a class="nav" href="skeletonmore.html">More Like This</a>
+</nav>
 <section>
-    <img class="toppic"src="images/about1new.jpg" width="1355" alt="my photo">
+    <img class="toppic"src="images/about1new.jpg" width="1355" alt="Quinn XCII Singing and Looking Toward Crowd">
     <h2>Biography</h2>
 <div class="bio">
     <div class="description"><p>Quinn XCII is a 29 year-old American singer-songwriter from Detroit, Michigan. His birth name is Michael Temoroski, but his fans know him by his stage name; Quinn XCII. Quinn XCII is an acronym for “Quit Unless your Instincts are Never Neglected” followed by his birth year, ‘92. Quinn adopted this quote from one of his professors at Michigan State University, where he attended college. Sophomore year of college is when Quinn began to pursue his interest in music by singing/writing his own songs and uploading them to YouTube. At this early stage in his career, he went by “Mike T” before he came up with Quinn XCII. </p></div>
@@ -142,16 +144,17 @@
 </div>
     <hr>
 </section>
+<section>
     <h2>Photos</h2>
         <div class="coolpic1">
-            <img class="edm" src="images/about3.jpg" alt="my photo">
-            <img class="edm" src="images/about4.jpg" alt="my photo">
-            <img class="edm" src="images/about5.jpg" alt="my photo">
+            <img class="edm" src="images/about3.jpg" alt="Quinn XCII Concert from Crowd Perspective">
+            <img class="edm" src="images/about4.jpg" alt="Quinn XCII DJ Set">
+            <img class="edm" src="images/about5.jpg" alt="Quinn XCII Concert Finale">
         </div>
         <div class="coolpic2">
-            <img class="edm" src="images/about6.jpg" alt="my photo">
-            <img class="edm" src="images/about7.jpg" alt="my photo">
-            <img class="edm" src="images/about8.jpg" alt="my photo">
+            <img class="edm" src="images/about6.jpg" alt="Quinn XCII Performance in Florida">
+            <img class="edm" src="images/about7.jpg" alt="Quinn XCII DJ Set">
+            <img class="edm" src="images/about8.jpg" alt="Back of Quinn XCII Performing">
         </div>
     <hr>
     <h2>Career Timeline</h2>
@@ -204,44 +207,45 @@
     <div class="words" style="font-size: 20px;">released “Change of Scenery 2” album</div>
     <br>
     <hr>
-    <footer>
-        <div class="topfooter">
-            <div>
-                <div>&copy; 2021 Yui - All Rights Reserved</div>
-            </div>
-            <div>
-                <div class= "navselector">
-                    <a class="nav" href="skeletonhome.html">Home</a>
-                    <a class="nav" href="skeletonabout.html">About</a>
-                    <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
-                    <a class="nav" href="skeletonmore.html">More Like This</a>
-                </div>
+</section>
+<footer>
+    <div class="topfooter">
+        <div>
+            <div>&copy; 2021 Yui - All Rights Reserved</div>
+        </div>
+        <div>
+            <div class= "navselector">
+                <a class="nav" href="skeletonhome.html">Home</a>
+                <a class="nav" href="skeletonabout.html">About</a>
+                <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
+                <a class="nav" href="skeletonmore.html">More Like This</a>
             </div>
         </div>
-        <div class="bottomfooter">
+    </div>
+    <div class="bottomfooter">
+        <div>
+        <div><strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong></div>
+        </div>
+        <div>
             <div>
-            <div><strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong></div>
-            </div>
-            <div>
-                <div>
-                    <a class="logo" href="https://www.facebook.com/quinnxcii">
-                        <img src="images/facebook.png" width="20" alt="my photo">
-                    </a>
-                    <a class="logo" href="https://www.instagram.com/quinnxcii/">
-                        <img src="images/instagram.png" width="20" alt="my photo">
-                    </a>
-                    <a class="logo" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-                        <img src="images/spotify.png" width="20" alt="my photo">
-                    </a>
-                    <a class="logo" href="https://twitter.com/QuinnXCII?s=20">
-                        <img src="images/twitter.png" width="20" alt="my photo">
-                    </a>
-                    <a class="logo" href="https://quinnxcii.com">
-                        <img src="images/web.png" width="20" alt="my photo">
-                    </a>
-                </div>
+                <a class="logo" href="https://www.facebook.com/quinnxcii">
+                    <img src="images/facebook.png" width="20" alt="Quinn XCII Facebook">
+                </a>
+                <a class="logo" href="https://www.instagram.com/quinnxcii/">
+                    <img src="images/instagram.png" width="20" alt="Quinn XCII Instagram">
+                </a>
+                <a class="logo" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
+                    <img src="images/spotify.png" width="20" alt="Quinn XCII Spotify">
+                </a>
+                <a class="logo" href="https://twitter.com/QuinnXCII?s=20">
+                    <img src="images/twitter.png" width="20" alt="Quinn XCII Twitter">
+                </a>
+                <a class="logo" href="https://quinnxcii.com">
+                    <img src="images/web.png" width="20" alt="Quinn XCII Website">
+                </a>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 </body>
 </html>
