--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" alt="Music Note Icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com" alt="Link to Google Font">
+    <link rel="preconnect" href="https://fonts.gstatic.com" alt="Link to Google Font" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" alt="Link to Google Font">
     <style>
         body {
             background-color: rgb(211, 252, 204);
@@ -112,10 +112,11 @@
     </style>
 </head>
 <body>
+<header>
     <div class="top">
         <div>
             <div class="mylogo">
-                <div><img src="images/logo.png" width="100" alt="my photo"></div>
+                <div><img src="images/logo.png" width="100" alt="My Logo"></div>
             </div>
         </div>
         <div class="socials">
@@ -129,18 +130,20 @@
         </div>
     </div>
     <h1>Welcome to Quinn XCII's Fan Page!</h1>
-    <nav>
-        <a class="nav" href="skeletonhome.html">Home</a>
-        <a class="nav" href="skeletonabout.html">About</a>
-        <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
-        <a class="nav" href="skeletonmore.html">More Like This</a>
-    </nav>
+</header>
+<nav>
+    <a class="nav" href="skeletonhome.html">Home</a>
+    <a class="nav" href="skeletonabout.html">About</a>
+    <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
+    <a class="nav" href="skeletonmore.html">More Like This</a>
+</nav>
 <section>
-    <img class="intropic" src="images/home3new.jpg" width= "1355" alt="my photo">
+    <img class="intropic" src="images/home3new.jpg" width= "1355" alt="Quinn XCII Facing Crowd">
     <h2>About the Site</h2>
     <p>Welcome to my website dedicated to an American singer-songwriter known as Quinn XCII. If you are a fan of his music, this is the perfect webpage for you! This site allows you to discover everything there is to know about Quinn XCII including his personal biography, merchandise, tours, life accomplishments, song recommendations, and more.</p>
     <hr>
 </section>
+<section>
     <h2>Tour Dates</h2>
     <div class="both">
         <div class="biggertable">
@@ -197,52 +200,51 @@
         </div>
         <div class="imagestogether">
             <div class="images">
-                <img class="imageblue" src="images/home1.jpg" width="300" alt="my photo">
-                <img class="imageblack" src="images/home2.jpg" width="300" alt="my photo">
+                <img class="imageblue" src="images/home1.jpg" width="300" alt="Quinn XCII Singing into Microphone">
+                <img class="imageblack" src="images/home2.jpg" width="300" alt="Quinn XCII Singing into Microphone">
             </div>
         </div>
     </div>
-    <br>
     <hr>
-    <br>
-    <footer>
-        <div class="topfooter">
-            <div>
-                <div>&copy; 2021 Yui - All Rights Reserved</div>
-            </div>
-            <div>
-                <div class= "navselector">
-                    <a class="nav" href="skeletonhome.html">Home</a>
-                    <a class="nav" href="skeletonabout.html">About</a>
-                    <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
-                    <a class="nav" href="skeletonmore.html">More Like This</a>
-                </div>
+</section>
+<footer>
+    <div class="topfooter">
+        <div>
+            <div>&copy; 2021 Yui - All Rights Reserved</div>
+        </div>
+        <div>
+            <div class= "navselector">
+                <a class="nav" href="skeletonhome.html">Home</a>
+                <a class="nav" href="skeletonabout.html">About</a>
+                <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
+                <a class="nav" href="skeletonmore.html">More Like This</a>
             </div>
         </div>
-        <div class="bottomfooter">
+    </div>
+    <div class="bottomfooter">
+        <div>
+        <div><strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong></div>
+        </div>
+        <div>
             <div>
-            <div><strong>Privacy Policy / Your Privacy Rights / Terms and Conditions</strong></div>
-            </div>
-            <div>
-                <div>
-                    <a class="logo" href="https://www.facebook.com/quinnxcii">
-                        <img src="images/facebook.png" width="20" alt="my photo">
-                    </a>
-                    <a class="logo" href="https://www.instagram.com/quinnxcii/">
-                        <img src="images/instagram.png" width="20" alt="my photo">
-                    </a>
-                    <a class="logo" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-                        <img src="images/spotify.png" width="20" alt="my photo">
-                    </a>
-                    <a class="logo" href="https://twitter.com/QuinnXCII?s=20">
-                        <img src="images/twitter.png" width="20" alt="my photo">
-                    </a>
-                    <a class="logo" href="https://quinnxcii.com">
-                        <img src="images/web.png" width="20" alt="my photo">
-                    </a>
-                </div>
+                <a class="logo" href="https://www.facebook.com/quinnxcii">
+                    <img src="images/facebook.png" width="20" alt="Quinn XCII Facebook">
+                </a>
+                <a class="logo" href="https://www.instagram.com/quinnxcii/">
+                    <img src="images/instagram.png" width="20" alt="Quinn XCII Instagram">
+                </a>
+                <a class="logo" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
+                    <img src="images/spotify.png" width="20" alt="Quinn XCII Spotify">
+                </a>
+                <a class="logo" href="https://twitter.com/QuinnXCII?s=20">
+                    <img src="images/twitter.png" width="20" alt="Quinn SXCII Twitter">
+                </a>
+                <a class="logo" href="https://quinnxcii.com">
+                    <img src="images/web.png" width="20" alt="Quinn XCII Website">
+                </a>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 </body>
 </html>
