--- a/project/skeletonmore.html
+++ b/project/skeletonmore.html
@@ -117,7 +117,7 @@
             .kings {width: 100%}
             .dorris {width: 100%}
             .watch {font-size: 1.5em;}
-            .minispotify {margin-top: .2em; margin-left: 1em; margin-right: 1em; margin-bottom: 1em;}
+            .minispotify {margin-top: .3em; margin-left: 1em; margin-right: 1em; margin-bottom: 1em;}
             p {padding: 1em; font-size: 1em;}
             h1 {font-size: 2em;}
             h2 {font-size: 1em;}
@@ -125,19 +125,20 @@
     </style>
 </head>
 <body>
+<header>
     <div class="top">
         <div>
             <div class="mylogo">
-                <div><img src="images/logo.png" width="100" alt="my photo"></div>
+                <div><img src="images/logo.png" width="100" alt="My Logo"></div>
             </div>
         </div>
         <div class="socials">
             <div>
-                <div class="logo"><a href="https://www.facebook.com/quinnxcii"><img src="images/facebook.png" width="20" alt="my photo"></a></div>
-                <div class="logo"><a href="https://www.instagram.com/quinnxcii/"><img src="images/instagram.png" width="20" alt="my photo"></a></div>
-                <div class="logo"><a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ"><img src="images/spotify.png" width="20" alt="my photo"></a></div>
-                <div class="logo"><a href="https://twitter.com/QuinnXCII?s=20"><img src="images/twitter.png" width="20" alt="my photo"></a></div>
-                <div class="logo"><a href="https://quinnxcii.com"><img src="images/web.png" width="20" alt="my photo"></a></div>
+                <div class="logo"><a href="https://www.facebook.com/quinnxcii"><img src="images/facebook.png" width="20" alt="Quinn XCII Facebook"></a></div>
+                <div class="logo"><a href="https://www.instagram.com/quinnxcii/"><img src="images/instagram.png" width="20" alt="Quinn XCII Instagram"></a></div>
+                <div class="logo"><a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ"><img src="images/spotify.png" width="20" alt="Quinn XCII Spotify"></a></div>
+                <div class="logo"><a href="https://twitter.com/QuinnXCII?s=20"><img src="images/twitter.png" width="20" alt="Quinn XCII Twitter"></a></div>
+                <div class="logo"><a href="https://quinnxcii.com"><img src="images/web.png" width="20" alt="Quinn XCII Website"></a></div>
             </div>
         </div>
     </div>
@@ -145,16 +146,18 @@
     <div class="subbox">
         <div class="subtitle"><h2>Check out the artists below! Or...</h2></div>
         <div class="minispotify"><a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-            <img src="images/more1.png" width="110" alt="my photo">
+            <img src="images/more1.png" width="110" alt="Quinn XCII Spotify">
         </a></div>
     </div>
-    <nav class= "navselector">
-        <a class="nav" href="skeletonhome.html">Home</a>
-        <a class="nav" href="skeletonabout.html">About</a>
-        <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
-        <a class="nav" href="skeletonmore.html">More Like This</a>
-    </nav>
-    <img class="intropic" src="images/more2.jpg" width= "1355" alt="my photo">
+</header>
+<nav class= "navselector">
+    <a class="nav" href="skeletonhome.html">Home</a>
+    <a class="nav" href="skeletonabout.html">About</a>
+    <a class="nav" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" target="_blank">Music</a>
+    <a class="nav" href="skeletonmore.html">More Like This</a>
+</nav>
+<section>
+    <img class="intropic" src="images/more2.jpg" width= "1355" alt="Quinn XCII Concert in California">
     <h2><strong>Chelsea Cutler</strong></h2>
     <p><strong>Chelsea Cutler: 24 year-old American singer-songwriter</strong><br>
         <span class="break"></span>
@@ -165,13 +168,15 @@
     <div class="chelseabox">
         <div class="watch">Click below to watch the music video!</div>
     <div class="link"><a href="https://youtu.be/EMmxVLi3dxg">
-        <img class="flareguns" src="images/flare.png" alt="my photo">
+        <img class="flareguns" src="images/flare.png" alt="Flare Guns Music Video">
     </a></div>
     <div class="link"><a href="https://youtu.be/EYTUV32Gi0o">
-        <img class="stay" src="images/stay.png" alt="my photo">
+        <img class="stay" src="images/stay.png" alt="Stay Next to Me Music Video">
     </a></div>
     </div>
     <hr>
+</section>
+<section>
     <h2><strong>Ayokay</strong></h2>
     <p><strong>Ayokay: 29 year-old American producer and DJ</strong><br>
         <span class="break"></span>
@@ -182,10 +187,12 @@
     <div class="ayokaybox">
         <div class= "watch">Click below to watch the music video!</div>
         <div class="link"><a href="https://youtu.be/5dS-n8qZjPk">
-            <img class="kings" src="images/kings.png" alt="my photo">
+            <img class="kings" src="images/kings.png" alt="Kings of Summer Music Video">
         </a></div>
     </div>
     <hr>
+</section>
+<section>
     <h2><strong>Jeremy Zucker</strong></h2>
     <p><strong>Jeremy Zucker: 25 year-old American singer-songwriter</strong><br>
         <span class="break"></span>
@@ -196,11 +203,11 @@
     <div class="jeremybox">
         <div class= "watch">Click below to watch the music video!</div>
         <div class="link"><a href="https://youtu.be/LcJxiMCV2qc">
-            <img class="dorris" src="images/dorris.png" width="700" alt="my photo">
+            <img class="dorris" src="images/dorris.png" width="700" alt="Dorris Terrace Music Video">
         </a></div>
     </div>
     <hr>
-    <br>
+</section>
     <footer>
         <div class="topfooter">
             <div>
@@ -222,19 +229,19 @@
             <div>
                 <div>
                     <a class="logo" href="https://www.facebook.com/quinnxcii">
-                        <img src="images/facebook.png" width="20" alt="my photo">
+                        <img src="images/facebook.png" width="20" alt="Quinn XCII Facebook">
                     </a>
                     <a class="logo" href="https://www.instagram.com/quinnxcii/">
-                        <img src="images/instagram.png" width="20" alt="my photo">
+                        <img src="images/instagram.png" width="20" alt="Quinn XCII Instagram">
                     </a>
                     <a class="logo" href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
-                        <img src="images/spotify.png" width="20" alt="my photo">
+                        <img src="images/spotify.png" width="20" alt="Quinn XCII Spotify">
                     </a>
                     <a class="logo" href="https://twitter.com/QuinnXCII?s=20">
-                        <img src="images/twitter.png" width="20" alt="my photo">
+                        <img src="images/twitter.png" width="20" alt="Quinn XCII Twitter">
                     </a>
                     <a class="logo" href="https://quinnxcii.com">
-                        <img src="images/web.png" width="20" alt="my photo">
+                        <img src="images/web.png" width="20" alt="Quinn XCII Website">
                     </a>
                 </div>
             </div>
