--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -110,6 +110,11 @@
             h2 {font-size: 1em;}
         }   
     </style>
+    <script>
+        function Tickets () {
+            alert('Quinn XCII may not have any tickets avaliable right now!')
+        }
+    </script>
 </head>
 <body>
 <header>
@@ -153,47 +158,47 @@
                     <tr>
                         <td>AUG 31</td>
                         <td>Berkeley, CA | The Greek Theater</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS </a></td>
                     </tr>
                     <tr>
                         <td>SEP 02</td>
                         <td>Salt Lake City, UT | The Complex</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS</a></td>
                     </tr>
                     <tr>
                         <td>SEP 05</td>
                         <td>St. Louis, MO | St. Louis Music Park</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS</a></td>
                     </tr>
                     <tr>
                         <td>SEP 07</td>
                         <td>Minneapolis, MN | The Armour</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS</a></td>
                     </tr>
                     <tr>
                         <td>SEP 10</td>
                         <td>Rochester Hills, MI | Medow Brook</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS</a></td>
                     </tr>
                     <tr>
                         <td>SEP 11</td>
                         <td>Chicago, IL | Huntington Pavilion</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS</a></td>
                     </tr>
                     <tr>
                         <td>SEP 12</td>
                         <td>Indianapolis, IN | TCU Amphitheater</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS</a></td>
                     </tr>
                     <tr>
                         <td>SEP 14</td>
                         <td>Cleveland, OH | Jacobs Pavilion</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS</a></td>
                     </tr>
                     <tr>
                         <td>SEP 16</td>
                         <td>Philidelphia, PA | Skyline Stage</td>
-                        <td class="ticket"><a href="https://quinnxcii.com/tour/">TICKETS</a></td>
+                        <td class="ticket"><a href="https://quinnxcii.com/tour/" onclick="Tickets();">TICKETS</a></td>
                     </tr>
                 </table>
             </div>
