--- a/project/skeletonmore.html
+++ b/project/skeletonmore.html
@@ -123,6 +123,14 @@
             h2 {font-size: 1em;}
         }
     </style>
+    <script>
+        function Spotify () {
+            alert('Taking you to Spotify!')
+        }
+        function Youtube () {
+            alert('Taking you to Youtube!')
+        }
+    </script>
 </head>
 <body>
 <header>
@@ -145,7 +153,7 @@
     <h1>Interested in more music like Quinn XCII?</h1>
     <div class="subbox">
         <div class="subtitle"><h2>Check out the artists below! Or...</h2></div>
-        <div class="minispotify"><a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ">
+        <div class="minispotify"><a href="https://open.spotify.com/artist/3ApUX1o6oSz321MMECyIYd?si=9urx1mO3T42QqK4Y2ea1YQ" onclick="Spotify();">
             <img src="images/more1.png" width="110" alt="Quinn XCII Spotify">
         </a></div>
     </div>
@@ -168,10 +176,10 @@
     <div class="chelseabox">
         <div class="watch">Click below to watch the music video!</div>
     <div class="link"><a href="https://youtu.be/EMmxVLi3dxg">
-        <img class="flareguns" src="images/flare.png" alt="Flare Guns Music Video">
+        <img class="flareguns" src="images/flare.png" alt="Flare Guns Music Video" onclick="Youtube();">
     </a></div>
     <div class="link"><a href="https://youtu.be/EYTUV32Gi0o">
-        <img class="stay" src="images/stay.png" alt="Stay Next to Me Music Video">
+        <img class="stay" src="images/stay.png" alt="Stay Next to Me Music Video" onclick="Youtube();">
     </a></div>
     </div>
     <hr>
@@ -187,7 +195,7 @@
     <div class="ayokaybox">
         <div class= "watch">Click below to watch the music video!</div>
         <div class="link"><a href="https://youtu.be/5dS-n8qZjPk">
-            <img class="kings" src="images/kings.png" alt="Kings of Summer Music Video">
+            <img class="kings" src="images/kings.png" alt="Kings of Summer Music Video" onclick="Youtube();">
         </a></div>
     </div>
     <hr>
@@ -203,7 +211,7 @@
     <div class="jeremybox">
         <div class= "watch">Click below to watch the music video!</div>
         <div class="link"><a href="https://youtu.be/LcJxiMCV2qc">
-            <img class="dorris" src="images/dorris.png" width="700" alt="Dorris Terrace Music Video">
+            <img class="dorris" src="images/dorris.png" width="700" alt="Dorris Terrace Music Video" onclick="Youtube();">
         </a></div>
     </div>
     <hr>
