--- a/project/skeletonhome.html
+++ b/project/skeletonhome.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" alt="Music Note Icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com" alt="Link to Google Font">
-    <link rel="preconnect" href="https://fonts.gstatic.com" alt="Link to Google Font" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" alt="Link to Google Font">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: rgb(211, 252, 204);
